--- a/public/about/index.html
+++ b/public/about/index.html
@@ -62,6 +62,8 @@
     <div class="article-content">
       <p>Davide Lorino is a postgraduate Data Science student at the University of Technology, Sydney.</p>
 
+<p>This website features a collection of data science projects using the R programming language and RStudio.</p>
+
     </div>
   </article>
 
